# fastapi-loterias-api

./: .editorconfig  .env.example  .gitignore  README.md  cspell.config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.docker/: Dockerfile  compose.yml
loterias/: constants.py  main.py  models.py
loterias/core/: cache.py  database.py  scheduler.py  services.py  settings.py
loterias/enums/: lottery.py  settings.py
loterias/internal/: admin.py  deps.py
