[tool.poetry]
name = "fastapi-loterias-api"
version = "0.1.0"
description = ""
authors = ["Maksuel Nascimento <mk-nascimento@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic-settings = "^2.4.0"
motor = {extras = ["srv"], version = "^3.5.1"}

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.5"

[tool.ruff]
extend-exclude = []
line-length = 119
output-format = "grouped"
src = ["loterias", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "ruff check . --diff"
format = "ruff check . --fix && ruff format ."
run = "fastapi dev loterias/main.py"
pre-test = "task lint"
test = "pytest -s -x --cov=loterias -vv"
post-test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
